Se sube Desafio de DOM - Proyecto Final

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -7,6 +7,29 @@
     <title>Desafio 5 - Objetos</title>
 </head>
 <body>
+    <div>
+        <p>Lista de BPM ingresados por el usuario:</p>
+        <ul>
+            <li id="bpm1"></li>
+            <li id="bpm2"></li>
+            <li id="bpm3"></li>
+        </ul>
+    </div>
+    <div>
+        <p>Lista de métricas ingresadas por el usuario:</p>
+        <ul>
+            <li id="met1"></li>
+            <li id="met2"></li>
+            <li id="met3"></li>
+        </ul>
+    </div>
+
+
+
+
+
+
+
     <script src="main.js"></script>
 </body>
 </html>
