Se sube Desafio de EVENTOS - Proyecto Final

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 5 - Objetos</title>
+    <title>Desafio 7 - Eventos</title>
 </head>
 <body>
     <div>
-        <p>Lista de BPM ingresados por el usuario:</p>
-        <ul>
-            <li id="bpm1"></li>
-            <li id="bpm2"></li>
-            <li id="bpm3"></li>
-        </ul>
+        <p>Ingrese el BPM deseado:</p>
+        <form id="formularioBpm">
+            <input type="text" id="inputBPM">
+       </form>
+      
     </div>
     <div>
-        <p>Lista de métricas ingresadas por el usuario:</p>
-        <ul>
-            <li id="met1"></li>
-            <li id="met2"></li>
-            <li id="met3"></li>
-        </ul>
+        <p>Ingrese la cantidad de Beats deseados:</p>
+        <form id="formularioBeats">
+            <input type="text" id="inputBeats">
+            <input type="submit" value="Enviar" id="boton">
+       </form>
+      
     </div>
 
 
