--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -43,6 +43,7 @@
             </div>
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
