Se sube Tercera PreEntrega - Proyecto Final

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e0e4b94a49.js" crossorigin="anonymous"></script>
     <title>Metronomo Interactivo</title>
 </head>
 <body>
@@ -40,6 +41,14 @@
                 <div >
                     <button class="boton-chico" id="boton-sumar-beats">+</button>
                 </div>
+            </div>
+            <div id="boton-play" class="boton-grande">
+                <i class="fas fa-play"></i>
+            </div>
+            <div id="beats-container">
+            </div>
+            <div >
+                <button id="boton-guardar">Guardar Config</button>
             </div>
         </div>
     </main>
