Se sube Desafio de AJAX - Proyecto Final

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -47,12 +47,31 @@
             </div>
             <div id="beats-container">
             </div>
-            <div >
-                <button id="boton-guardar">Guardar Config</button>
+            <div class="botonesAvanzados">
+                <div>
+                    <button id="botonConfig">Buscar</button>
+                </div>
+                <div>
+                    <button id="boton-guardar">Guardar</button>
+                </div>
             </div>
         </div>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <section class="contenedorConfig">
+        <div class="contenedorCerrar">
+            <div id="botonCerrar">
+                <i class="fas fa-times"></i>
+            </div>
+        </div>
+        <div class="formBusqueda">
+            <form id="buscador">
+                <input type="text" name="Campo-de-busqueda" id="campoBusqueda" placeholder="Ingresá tu búsqueda">
+                <input type="button" value="Buscar" id="botonBuscar">
+            </form>
+        </div>
+        <section class="contenedorResultados">
+        </section>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    <script src="main.js"></script>
 </body>
 </html>
