Proyecto Final - Actualizacion - Estilos

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -47,9 +47,9 @@
             </div>
             <div id="beats-container">
             </div>
-            <div class="botonesAvanzados">
+            <div class="botones-avanzados">
                 <div>
-                    <button id="botonConfig">Buscar</button>
+                    <button id="boton-config">Buscar</button>
                 </div>
                 <div>
                     <button id="boton-guardar">Guardar</button>
@@ -57,21 +57,22 @@
             </div>
         </div>
     </main>
-    <section class="contenedorConfig">
-        <div class="contenedorCerrar">
-            <div id="botonCerrar">
+    <section class="contenedor-config">
+        <div class="contenedor-cerrar">
+            <div id="boton-cerrar">
                 <i class="fas fa-times"></i>
             </div>
         </div>
-        <div class="formBusqueda">
+        <div class="form-busqueda">
             <form id="buscador">
-                <input type="text" name="Campo-de-busqueda" id="campoBusqueda" placeholder="Ingresá tu búsqueda">
-                <input type="button" value="Buscar" id="botonBuscar">
+                <input type="text" name="Campo-de-busqueda" id="campo-busqueda" placeholder="Ingresá tu búsqueda">
+                <input type="button" value="Buscar" id="boton-buscar">
             </form>
         </div>
-        <section class="contenedorResultados">
+        <section class="contenedor-resultados">
         </section>
     </section>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    
+    <script src="main.js"></script>
 </body>
 </html>
