Proyecto Final - Finalizado

--- a/ProyectoFinal/index.html
+++ b/ProyectoFinal/index.html
@@ -21,10 +21,16 @@
             </div>
             <div class="bpm-ajust">
                 <div class="bpm">
+                    <button class="boton-grande" id="bpm-boton-restar-cinco" >-5</button>
+                </div>
+                <div class="bpm">
                     <button class="boton-grande" id="bpm-boton-restar" >-</button>
                 </div>
                 <div  class="bpm">
                     <button class="boton-grande" id="bpm-boton-sumar">+</button>
+                </div>
+                <div  class="bpm">
+                    <button class="boton-grande" id="bpm-boton-sumar-cinco">+5</button>
                 </div>
             </div>
 
